...
                    <RelativeLayout
                        android:id="@+id/car_types_label_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <com.etiennelawlor.discreteslider.library.ui.DiscreteSlider
                        android:id="@+id/car_types_slider"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="bottom"
                        app:backdropFillColor="@color/white"
                        app:backdropStrokeColor="#C4C6CA"
...
