...
        <item quantity="one">%d star</item>
        <item quantity="other">%d stars</item>
    </plurals>

    <string name="terms_invalid">Can\'t load Terms and Conditions. Please contact support</string>
    <string name="terms_load_error">Failed loading Terms and Conditions. Please retry</string>
    <string name="google_map">Google Map</string>
    <string name="car_marker">Car Marker</string>
    <string name="pickup_marker">Pickup Marker</string>
    <string name="destination_marker">Destination Marker</string>
    <string name="prev_ride_marker">Prev Ride Marker</string>
    <string name="next_ride_marker">Next Ride Marker</string>
    <string name="eta_marker">Eta Marker:</string>
...
